testing/macro-tests/tests/ui/pk_fields_composite_unit.stderr
error: primary key field 'singleton' cannot use Unit inside a composite primary key
  --> tests/ui/pk_fields_composite_unit.rs:17:1
   |
17 | / #[entity(
18 | |     store = "UiDataStore",
19 | |     pk(fields = ["tenant_id", "singleton"]),
20 | |     fields(
...  |
24 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `entity` (in Nightly builds, run with -Z macro-backtrace for more info)
